<resources>
    <string name="app_name">Platzigram</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="logo">Logo</string>
    <string name="text_button_login">Inicia Sesión</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint__confirm_password">Conformar Contraseña</string>
    <string name="text_button_createaccount">Únete</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="usernamecard">Sebas Pedroza</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_Card">4 días</string>
    <string name="likenumercard_card">10 Me gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Perfil</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondword_detail">Me gusta</string>
    <string name="titleimagedetail">\"Todo copas en la playa\"</string>
    <string name="lorem">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas \"Letraset\", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</string>
    <string name="transitionname_picture">transitionnamepicture</string>


</resources>
